# thailang

./: .code-review-graphignore  .gitattributes  .gitignore  .mcp.json  Cargo.toml  DEPLOYMENT.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.claude/: CLAUDE.md  settings.json
.github/actions/setup-thailang/: action.yml
.github/workflows/: ci.yml  publish-npm.yml  rust.yml  web.yml
compiler/crates/ast/: Cargo.toml
compiler/crates/ast/src/: expr.rs  span.rs  types.rs
compiler/crates/ast/tests/: construct.rs
compiler/crates/cli/: Cargo.toml
compiler/crates/cli/src/: main.rs
compiler/crates/emit-js/: Cargo.toml
compiler/crates/emit-js/src/: emitter.rs  lib.rs  reserved.rs  stdlib.rs
compiler/crates/emit-js/tests/: basic.rs  control_flow.rs  functions.rs  integration.rs  is_operator.rs  js_reserved.rs  stdlib.rs
compiler/crates/lexer/: Cargo.toml
compiler/crates/lexer/src/: lexer.rs  lib.rs  token.rs
compiler/crates/lexer/tests/: comments.rs  fuzz.rs  identifiers.rs  keywords.rs  literals.rs  operators.rs
compiler/crates/parser/: Cargo.toml
compiler/crates/parser/src/: error.rs  lib.rs  parser.rs
compiler/crates/parser/tests/: control_flow.rs  expressions.rs  foreach.rs  functions.rs  is_check.rs  programs.rs  statements.rs
compiler/crates/thailang-ast/src/: decl.rs  expr.rs  lib.rs  stmt.rs  types.rs
compiler/crates/thailang-ast/tests/: construct.rs
compiler/crates/thailang-cli/: Cargo.toml
compiler/crates/thailang-cli/src/: main.rs
compiler/crates/thailang-emit-js/: Cargo.toml
compiler/crates/thailang-emit-js/src/: emitter.rs
compiler/crates/thailang-emit-js/tests/: control_flow.rs  functions.rs  integration.rs
compiler/crates/thailang-lexer/: Cargo.toml
compiler/crates/thailang-lexer/src/: token.rs
compiler/crates/thailang-lexer/tests/: identifier_fuzz.rs
compiler/crates/thailang-parser/: Cargo.toml
compiler/crates/thailang-parser/src/: parser.rs
compiler/crates/thailang-parser/tests/: expressions.rs  programs.rs  statements.rs
compiler/crates/thailang-types/: Cargo.toml
compiler/crates/thailang-types/src/: checker.rs  error.rs
compiler/crates/thailang-types/tests/: basic_checks.rs
compiler/crates/thailang-wasm/: Cargo.toml
compiler/crates/thailang-wasm/src/: lib.rs
compiler/crates/types/: Cargo.toml
compiler/crates/types/src/: checker.rs  error.rs  lib.rs  stdlib.rs
compiler/crates/types/tests/: basic_checks.rs  env_inference.rs  narrowing.rs  snapshot_typeerr.rs  stdlib_inference.rs
compiler/crates/types/tests/snapshots/: snapshot_typeerr__fn_param_flows.snap  snapshot_typeerr__let_annotation_mismatch.snap  snapshot_typeerr__narrowing_escape.snap  snapshot_typeerr__reassign_wrong_type.snap  snapshot_typeerr__return_wrong_type.snap  snapshot_typeerr__stdlib_return_mismatch.snap  snapshot_typeerr__union_miss.snap
compiler/crates/types/tests/typeerr/: fn_param_flows.th  let_annotation_mismatch.th  narrowing_escape.th  reassign_wrong_type.th  return_wrong_type.th  stdlib_return_mismatch.th  union_miss.th
compiler/crates/wasm/: Cargo.toml
compiler/crates/wasm/src/: lib.rs
docs/: KEYWORDS.md  SPEC.md
docs/keywords/: README.md  array-methods.md  console.md  date.md  error.md  json.md  language.md  math.md  number.md  object-methods.md  string-methods.md
examples/: fizzbuzz.th  narrow.expected.txt  narrow.th  stdlib.expected.txt  stdlib.th  typeerr_reassign.th  บวก.th  ผลไม้.expected.txt  ผลไม้.th  ลูป.th  สวัสดี.th
npm-cli/: .gitignore  .npmignore  LICENSE  README.md  package.json
npm-cli/lib/: cli.js  diagnostic.js
npm-cli/scripts/: prepack.js  smoke.js
playground-wasm/: package.json
scripts/: vercel-install.sh
tests/: wasm-smoke.cjs
tree-sitter-thailang/: .gitignore  LICENSE  README.md  binding.gyp  grammar.js  package.json  tree-sitter.json
tree-sitter-thailang/bindings/node/: binding.cc  index.js
tree-sitter-thailang/queries/: highlights.scm
tree-sitter-thailang/src/: grammar.json  node-types.json  parser.c
tree-sitter-thailang/test/corpus/: basics.txt
vscode-ext/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package.json
web/: next.config.ts  package.json  tsconfig.tsbuildinfo
web/public/: thailang.wasm
web/scripts/: build-pagefind.mjs  copy-ts-wasm.mjs
web/src/app/: globals.css  layout.tsx
web/src/app/docs/[[...slug]]/: page.tsx
web/src/app/playground/: page.tsx
web/src/entities/keyword/: model.ts
web/src/shared/config/: site.ts
web/src/shared/dev/: ReactGrabDev.tsx
web/src/shared/i18n/: LangProvider.tsx  copy.tsx
web/src/shared/lib/: docs-nav.ts  docs-source.ts  node-builtin-stub.ts  share-url.ts  shiki.ts  syntax.ts  thailang-paper.theme.json  thailang.tmLanguage.json  tree-sitter-loader.ts
web/src/shared/ui/: CodeBlock.tsx
web/src/shared/workers/: run.worker.ts
web/src/views/docs/: DocsView.module.css  DocsView.tsx
web/src/views/home/: HomePage.tsx
web/src/views/playground/: PlaygroundView.tsx
web/src/widgets/ast-panel/: AstPanel.tsx
web/src/widgets/closer/: Closer.tsx
web/src/widgets/code-showcase/: CodeShowcase.tsx
web/src/widgets/docs-search/: DocsSearch.tsx
web/src/widgets/docs-sidebar/: DocsSidebar.tsx
web/src/widgets/docs-toc/: DocsToc.tsx
web/src/widgets/feature-strip/: FeatureStrip.tsx
web/src/widgets/features-section/: FeaturesSection.tsx
web/src/widgets/hero/: Hero.tsx
web/src/widgets/hero-playground/: HeroPlayground.tsx  highlight.ts  run.worker.ts
web/src/widgets/keyword-index/: KeywordIndex.tsx
web/src/widgets/playground-editor/: PlaygroundEditor.tsx
web/src/widgets/playground-section/: PlaygroundSection.tsx
web/src/widgets/site-footer/: SiteFooter.tsx
web/src/widgets/tokens-panel/: TokensPanel.tsx
web/src/widgets/topbar/: Topbar.tsx
