[workspace]
resolver = "2"
members = [
  "compiler/crates/thailang-ast",
  "compiler/crates/thailang-cli",
  "compiler/crates/thailang-lexer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/9Tech-Solutions/thailang"
authors = ["Thailang Contributors"]

[workspace.dependencies]
# Pinned in Phase 1
logos = "0.14"
chumsky = "0.10"
ariadne = "0.4"
clap = { version = "4.5", features = ["derive"] }
insta = { version = "1.39", features = ["yaml"] }
proptest = "1.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
