[package]
name = "thailang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thailang compiler CLI — `thai` binary"

[[bin]]
name = "thai"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
thailang-ast = { path = "../ast" }
thailang-emit-js = { path = "../emit-js" }
thailang-lexer = { path = "../lexer" }
thailang-parser = { path = "../parser" }
thailang-types = { path = "../types" }
