[package]
name = "thailang-emit-js"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thailang JavaScript emitter — AST to JS source"

[lib]
path = "src/lib.rs"

[dependencies]
thailang-ast = { path = "../ast" }

[dev-dependencies]
thailang-parser = { path = "../parser" }
