[package]
name = "thailang-lexer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thailang lexer, Thai-aware tokenizer (logos)"

[lib]
path = "src/lib.rs"

[dependencies]
logos = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
