[package]
name = "thailang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thailang compiler CLI — `thai` binary"

[[bin]]
name = "thai"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
thailang-ast = { path = "../thailang-ast" }
thailang-emit-js = { path = "../thailang-emit-js" }
thailang-lexer = { path = "../thailang-lexer" }
thailang-parser = { path = "../thailang-parser" }
thailang-types = { path = "../thailang-types" }
