[package]
name = "thailang-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thailang parser — handwritten recursive descent + Pratt"

[lib]
path = "src/lib.rs"

[dependencies]
thailang-ast = { path = "../thailang-ast" }
thailang-lexer = { path = "../thailang-lexer" }
