[package]
name = "thailang-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thailang WASM bindings — browser/Node.js bridge"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
thailang-ast = { path = "../thailang-ast" }
thailang-emit-js = { path = "../thailang-emit-js" }
thailang-lexer = { path = "../thailang-lexer" }
thailang-parser = { path = "../thailang-parser" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
