[package]
name = "thailang-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thailang type checker, literal type validation"

[lib]
path = "src/lib.rs"

[dependencies]
thailang-ast = { path = "../ast" }

[dev-dependencies]
thailang-parser = { path = "../parser" }
insta = { workspace = true }
