[package]
name = "thailang-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thailang WASM bindings, browser/Node.js bridge"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
thailang-ast = { path = "../ast" }
thailang-emit-js = { path = "../emit-js" }
thailang-lexer = { path = "../lexer" }
thailang-parser = { path = "../parser" }
thailang-types = { path = "../types" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
